fix non-local samplesheets